# testing_jupyter_book

./: .buildinfo  12.0_DownloadMeteo_2005-2024_FLUXNET_diive_for_eddypro.html  Flux_Calculations.html  Flux_Post-processing.html  Links.html  Management_Data.html  Meteo_Data.html  README.html  README.md  References.html  Variables.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  text1.html
.ipynb_checkpoints/: Management_Data-checkpoint.html
.obsidian/: workspace.json
_sources/: Flux_Calculations.md  Flux_Post-processing.md  Links.md  Management_Data.md  README.md  Variables.md
notebooks/: 12.0_DownloadMeteo_2005-2024_FLUXNET_diive_for_eddypro.html
testing/: 12.0_DownloadMeteo_2005-2024_FLUXNET_diive_for_eddypro.ipynb  Meteo_Data.md  _toc.yml
testing/.ipynb_checkpoints/: Flux_Post-processing-checkpoint.md  Management_Data-checkpoint.md  _toc-checkpoint.yml
testing/_build/.doctrees/: 12.0_DownloadMeteo_2005-2024_FLUXNET_diive_for_eddypro.doctree  Flux_Calculations.doctree  Flux_Post-processing.doctree  Links.doctree  Management_Data.doctree  Meteo_Data.doctree  References.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  text1.doctree
testing/_build/html/: .buildinfo  12.0_DownloadMeteo_2005-2024_FLUXNET_diive_for_eddypro.html  Flux_Calculations.html  Flux_Post-processing.html  Links.html  Management_Data.html  Meteo_Data.html  References.html  genindex.html  intro.html  markdown.html  notebooks.html  (+4 more)
(+8 files in other folders)
