[project]
name = "testing-jupyter-book"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Hörtnagl",email = "lukas.hoertnagl@usys.ethz.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "lab (>=8.4,<9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
